[gd_scene load_steps=20 format=2]

[ext_resource path="res://Src/Shaders/Blur.shader" type="Shader" id=1]
[ext_resource path="res://Src/Textures/white.png" type="Texture" id=2]
[ext_resource path="res://Src/Fonts/Heebo-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Src/Themes/theme.tres" type="Theme" id=4]
[ext_resource path="res://Menu/Settings/Settings.gd" type="Script" id=5]
[ext_resource path="res://Src/Fonts/subtitle_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Menu/Settings/MenuButton.gd" type="Script" id=7]
[ext_resource path="res://Src/Themes/color_picker.tres" type="Theme" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/amount = 2.0

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.87451, 0.87451, 0.87451, 1 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.87451, 0.87451, 0.87451, 1 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.980392, 0.980392, 0.980392, 1 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.980392, 0.980392, 0.980392, 1 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Blur" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.529732
margin_bottom = -0.529724
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_bottom = 1.0
margin_left = 409.0
margin_top = 20.0
margin_right = 1019.0
margin_bottom = -19.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
focus_mode = 1
color = Color( 0.156863, 0.258824, 0.313726, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 610.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Game Settings"
align = 1
valign = 1

[node name="HSplitContainer4" type="HSplitContainer" parent="Control/VBoxContainer"]
margin_top = 49.0
margin_right = 610.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 10 )

[node name="VSplitContainer" type="HSeparator" parent="Control/VBoxContainer"]
margin_top = 63.0
margin_right = 610.0
margin_bottom = 67.0
custom_styles/separator = SubResource( 3 )

[node name="HSplitContainer3" type="HSplitContainer" parent="Control/VBoxContainer"]
margin_top = 71.0
margin_right = 610.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 20 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer"]
margin_top = 95.0
margin_right = 610.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/ScrollContainer"]
margin_right = 585.0
margin_bottom = 614.0
rect_min_size = Vector2( 585, 450 )
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Game" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 585.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Gameplay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5_HSplitContainer5" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 585.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 585.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Mouse Sensitivity"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_MouseSensitivity" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 2.0
step = 0.01
value = 0.5
scrollable = false

[node name="LineEdit_MouseSensitivity" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "0.5"
align = 1
max_length = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 585.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Target Size"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_TargetSize" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 20.0
value = 10.0
scrollable = false

[node name="LineEdit_TargetSize" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "10"
align = 1
max_length = 2

[node name="HBoxContainer9" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 585.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Target Distance"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_TargetDistance" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 30.0
value = 10.0
scrollable = false

[node name="LineEdit_TargetDistance" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "10"
align = 1
max_length = 2

[node name="Container_Color2" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 585.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color2"]
margin_right = 290.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Target Color"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton_Target" type="ColorPickerButton" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color2"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "#66ff70"
flat = true
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="20_HSplitContainer3" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 585.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/20_HSplitContainer3"]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 585.0
margin_bottom = 20.0

[node name="Label_Video" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 585.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 6 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5_HSplitContainer3" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 585.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 5 )

[node name="Container_WindowMode" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 585.0
margin_bottom = 265.0

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_WindowMode"]
margin_top = 5.0
margin_right = 290.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Window Mode"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowMode" type="MenuButton" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_WindowMode"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Fullscreen"
flat = false
items = [ "Windowed", null, 0, false, false, 0, 0, null, "", false, "Fullscreen", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer8" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 585.0
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Max FPS"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_MaxFPS" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 300.0
scrollable = false

[node name="LineEdit_MaxFPS" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "0"
align = 1
max_length = 3

[node name="20_HSplitContainer" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 585.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/20_HSplitContainer"]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 585.0
margin_bottom = 20.0

[node name="Label_Audio" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 585.0
margin_bottom = 353.0
custom_fonts/font = ExtResource( 6 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5_HSplitContainer2" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 585.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 368.0
margin_right = 585.0
margin_bottom = 394.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Master Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_MasterVolume" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
scrollable = false

[node name="LineEdit_MasterVolume" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "100"
align = 1
max_length = 3

[node name="20_HSplitContainer2" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 399.0
margin_right = 585.0
margin_bottom = 419.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/20_HSplitContainer2"]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 585.0
margin_bottom = 20.0

[node name="Label_Crosshair" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 585.0
margin_bottom = 451.0
custom_fonts/font = ExtResource( 6 )
text = "Crosshair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5_HSplitContainer4" type="HSplitContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 585.0
margin_bottom = 461.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 466.0
margin_right = 585.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Center Width"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_Crosshair_CenterWidth" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 2.0
scrollable = false

[node name="LineEdit_Crosshair_CenterWidth" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "2"
align = 1
max_length = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 497.0
margin_right = 585.0
margin_bottom = 523.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Line Width"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_Crosshair_LineWidth" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 2.0
scrollable = false

[node name="LineEdit_Crosshair_LineWidth" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "2"
align = 1
max_length = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 585.0
margin_bottom = 554.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Line Inner Gap"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_Crosshair_LineInnerGap" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 5.0
scrollable = false

[node name="LineEdit_Crosshair_LineInnerGap" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "5"
align = 1
max_length = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 559.0
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_top = 1.0
margin_right = 290.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Line Length"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_Crosshair_Length" type="HSlider" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/HBoxContainer"]
margin_top = 4.0
margin_right = 237.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 10.0
scrollable = false

[node name="LineEdit_Crosshair_Length" type="LineEdit" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/HBoxContainer"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 26.0
text = "10"
align = 1
max_length = 3

[node name="Container_Color" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 590.0
margin_right = 585.0
margin_bottom = 614.0

[node name="Label" type="Label" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color"]
margin_right = 290.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Color"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton_Crosshair" type="ColorPickerButton" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color"]
margin_left = 294.0
margin_right = 585.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "#66ff70"
flat = true
color = Color( 0.4, 1, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer5" type="HSplitContainer" parent="Control/VBoxContainer"]
margin_top = 500.0
margin_right = 610.0
margin_bottom = 530.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 534.0
margin_right = 610.0
margin_bottom = 561.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_ESC" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 27.0
rect_min_size = Vector2( 60, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "ESC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Save" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 100.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Save"

[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/HBoxContainer/HSlider_MouseSensitivity" to="." method="_on_HSlider_MouseSensitivity_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/HBoxContainer/LineEdit_MouseSensitivity" to="." method="_on_LineEdit_MouseSensitivity_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer/HSlider_TargetSize" to="." method="_on_HSlider_TargetSize_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer/LineEdit_TargetSize" to="." method="_on_LineEdit_TargetSize_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9/HBoxContainer/HSlider_TargetDistance" to="." method="_on_HSlider_TargetDistance_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9/HBoxContainer/LineEdit_TargetDistance" to="." method="_on_LineEdit_TargetDistance_text_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color2/ColorPickerButton_Target" to="." method="_on_ColorPickerButton_Target_color_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/HBoxContainer/HSlider_MaxFPS" to="." method="_on_HSlider_MaxFPS_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/HBoxContainer/LineEdit_MaxFPS" to="." method="_on_LineEdit_MaxFPS_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer/HSlider_MasterVolume" to="." method="_on_HSlider_MasterVolume_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer/LineEdit_MasterVolume" to="." method="_on_LineEdit_MasterVolume_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer/HSlider_Crosshair_CenterWidth" to="." method="_on_HSlider_Crosshair_CenterWidth_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer/LineEdit_Crosshair_CenterWidth" to="." method="_on_LineEdit_Crosshair_CenterWidth_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer/HSlider_Crosshair_LineWidth" to="." method="_on_HSlider_Crosshair_LineWidth_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer/LineEdit_Crosshair_LineWidth" to="." method="_on_LineEdit_Crosshair_LineWidth_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer/HSlider_Crosshair_LineInnerGap" to="." method="_on_HSlider_Crosshair_LineInnerGap_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer/LineEdit_Crosshair_LineInnerGap" to="." method="_on_LineEdit_Crosshair_LineInnerGap_text_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/HBoxContainer/HSlider_Crosshair_Length" to="." method="_on_HSlider_Crosshair_Length_value_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/HBoxContainer/LineEdit_Crosshair_Length" to="." method="_on_LineEdit_Crosshair_Length_text_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/ScrollContainer/VBoxContainer/Container_Color/ColorPickerButton_Crosshair" to="." method="_on_ColorPickerButton_Crosshair_color_changed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Button_ESC" to="." method="_on_Button_ESC_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Button_Save" to="." method="_on_Button_Save_pressed"]
